environments/gloo-gateway/gateway-api/1.18/ai-gateway/chatbot/base/general-chatbot/general-chatbot-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: general-chatbot-route
  namespace: ai-chatbot
  labels:
    example: chatbot-route
    gateway: https
spec:
  hostnames:
  - "general-chatbot.k8mesh.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: general-chat
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: general-chatbot-route-policies
